# kaos-citations

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  quality.yml  release.yml  scorecard.yml  security-light.yml  security.yml  test.yml
docs/: CITATION_TAXONOMY.md
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_citations/: __init__.py  _nlp.py  errors.py  extract.py  model.py  postprocess.py  resources.py  serve.py  settings.py  tools.py
kaos_citations/data/: LICENSE.vendored  __init__.py  _loaders.py  courts_states.json  courts_variables.json
kaos_citations/matchers/: __init__.py
kaos_citations/parsers/: __init__.py  accounting.py  agency.py  case.py  cfr.py  constitution.py  federal_rules.py  internet.py  legislative.py  regulatory.py  sec.py  statute.py
kaos_citations/parsers/identifiers/: __init__.py  arxiv.py  doi.py  pubmed.py
tests/benchmarks/: test_corpus_benchmark.py
tests/benchmarks/corpus/: accounting_excerpt.txt  negative_text.txt  scotus_excerpt.txt  sec_release_excerpt.txt
tests/fixtures/: README.md  case-citations-golden.jsonl  cfr-citations-golden.jsonl  statute-citations-golden.jsonl
tests/unit/: test_case_parser.py  test_cfr_parser.py  test_constitution_parser.py  test_data_loaders.py  test_federal_rules_parser.py  test_identifier_parsers.py  test_internet_parser.py  test_legislative_parser.py  test_matchers.py  test_model.py  test_nlp_boundary.py  test_phase2_4_parsers.py  test_postprocess.py  test_regulatory_parser.py  test_resources.py  test_serve_install_contract.py  test_statute_parser.py  test_tools.py
